# harmoniq

./: .gitignore  .pre-commit-config.yaml  DRAGGABLE_README.md  README.md  env.example  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  setup.sh  start.sh  test-draggable.html
backend/: alembic.ini  env.example  init_db.py  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/db/: base.py  models.py
backend/app/services/: auth.py
frontend/: index.html  package-lock.json  package.json  start.sh  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js
frontend/src/views/: Home.vue  (+5 more)
harmoniq/: __init__.py  settings.py  urls.py  views.py  wsgi.py
music/: __init__.py  admin.py  api_urls.py  models.py  serializers.py  urls.py  views.py
static/js/: app.js
static/src/: index.css
templates/: base.html  index.html
templates/components/: modal.html  settings-modal.html  streaming-modal.html
templates/tidal/: playlist_tracks.html  playlists.html
templates/v1/: index_v1.html
templates/v2/: index_v2.html
tests/: test_health.py
theme/: __init__.py  apps.py
theme/static_src/: package.json  tailwind.config.js
tidal/: api.py  apps.py  models.py  tasks.py  urls.py  views.py
tidal/migrations/: 0001_initial.py  0002_tidaltoken_tidal_user_id.py  0003_tidaltoken_tidal_country_tidaltoken_tidal_email_and_more.py  0004_playlist_song.py
(+12 files in other folders)
